Fix JS on GitHub pages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="./unicorn.png" type="image/x-icon" />
     <link rel="stylesheet" href="./style.css" />
     <!defer makes js to run after the page has loaded>
-    <script src="/app.js" defer></script>
+    <script src="./app.js" defer></script>
 
     <title>About Me</title>
   </head>
