--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <section>
         <h2>Education</h2>
         <p>I have studied both in Spain and the UK!</p>
-        <ul>
+        <ul class="edu">
           <li>CELTA</li>
           <li>MA in Applied Linguistics</li>
           <li>BA in English Studies</li>
@@ -47,20 +47,35 @@
       </section>
       <section>
         <h2>Work Experience</h2>
-        <p>
-          I have worked as an ESOL teacher for 4 years in private language
-          schools and City College before joining the bootcamp.
-        </p>
+        <ul>
+          <li>ESOL teacher in City College Norwich.</li>
+          <li>TEFL teacher in private language schools.</li>
+        </ul>
       </section>
       <section>
         <h2>Goals</h2>
-        <ol>
+        <ul>
           <li>
             To change my career path and get into the tech industry as a
             software developer.
           </li>
           <li>To find a job with good work-life balance.</li>
           <li>To find more fulfilling hobbies and interests.</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Top 10 Spanish Cities</h2>
+        <ol>
+          <li>Granada</li>
+          <li>Cordoba</li>
+          <li>Toledo</li>
+          <li>Barcelona</li>
+          <li>Santiago de Compostela</li>
+          <li>Valencia</li>
+          <li>Salamanca</li>
+          <li>Palma de Mallorca</li>
+          <li>Santander</li>
+          <li>Bilbao</li>
         </ol>
       </section>
       <button type="button" onclick="quiz()">Fun Quiz</button>
