--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
           src="https://upload.wikimedia.org/wikipedia/commons/8/8c/Norwich_Skyline.jpg"
           alt="Norwich"
         />
+        <img
+          class="Toledo"
+          src="https://www.spain.info/.content/imagenes/cabeceras-grandes/castilla-mancha/vistas-toledo-s535820527.jpg"
+          alt="Toledo"
+        />
       </section>
       <section>
         <h2>Education</h2>
@@ -78,7 +83,9 @@
           <li>Bilbao</li>
         </ol>
       </section>
-      <button type="button" onclick="quiz()">Fun Quiz</button>
+      <section class="buttonsection">
+        <button class="quiz" type="button" onclick="quiz()">Fun Quiz</button>
+      </section>
     </main>
     <footer>
       <p>&copy; Manuel Gonzalez</p>
